2014-02-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power5/Implies: Remove inexistent
	paths.

2014-02-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* elf/get-dynamic-info.h (elf_get_dynamic_info): Fix remove of
	assert.

2014-02-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Versions.def (libm): Add GLIBC_2.3.

2014-02-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* nptl/shlib-versions: Change powerpc*le start to 2.17.
	* shlib-versions: Likewise.

2014-02-04  Roland McGrath  <roland@hack.frob.com>
	    Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/Makefile [$(config-machine) ends with 'le']
	(abilist-pattern): New variable, set to %-le.abilist.

	* Makerules (abilist-pattern): New variable.
	(vpath): Use $(abilist-pattern) in place of %.abilist.
	(check-abi-% pattern rule): Likewise.
	(check-abi, update-abi): Likewise.

2014-01-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ#16431]
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c (__gettimeofday):
	Adjust the vDSO correctly for internal calls.
	* sysdeps/unix/sysv/linux/powerpc/time.c (time): Likewise.

2014-01-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16414]
	* sysdeps/powerpc/powerpc64/fpu/s_truncl.S: Remove wrong
	implementation.
	* sysdeps/ieee754/ldbl-128ibm/s_truncl.c: Remove bogus comment.

2014-01-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #14143]
	* sysdeps/powerpc/bits/fenv.h (__fe_nomask_env): Remove declaration.
	(__fe_mask_env): Likewise.
	* sysdeps/powerpc/fpu/fenv_libc.h (__fe_nomask_env): Remove
	libm_hidden_proto and add function prototype.
	(__fe_mask_env): Add function prototype.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/fe_nomask.c
	(__fe_nomask_env): Add compat symbol for GLIBC_2.1.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/fpu/fe_mask.c
	(__fe_mask_env): Remove compiler warnings regarding ununsed variables.